--- a/angular-material/src/app/login/login.component.html
+++ b/angular-material/src/app/login/login.component.html
@@ -1,3 +1,18 @@
-<p>
-  login works!
-</p>
+<mat-card class="login-card">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form class="login-form">
+        <mat-form-field>
+          <input matInput placeholder="Username" name="username" [(ngModel)]="username" required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" name="password" [(ngModel)]="password" required>
+        </mat-form-field>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button  mat-raised-button (click)="login()"  color="primary">Login</button>
+  </mat-card-actions>
+</mat-card>
