--- a/angular-material/src/app/customer-list/customer-list.component.html
+++ b/angular-material/src/app/customer-list/customer-list.component.html
@@ -18,5 +18,18 @@
       <mat-header-cell *matHeaderCellDef> Job </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.job}} </mat-cell>
     </ng-container>
+
+    <ng-container  matColumnDef="operations">
+      <mat-header-cell *matHeaderCellDef> Operations </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button  mat-button  color="primary" (click)="deleteCustomer(element.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-button color="primary" (click)="editCustomer(element.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
   </mat-table>
+  <mat-paginator #paginator [style.display]="loading === false ? 'block' : 'none'" [pageSize]="pageSize"></mat-paginator>
 </div>
