apply rating functionality

--- a/acme/src/app/products/product-list.component.html
+++ b/acme/src/app/products/product-list.component.html
@@ -32,17 +32,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let product of products">
+          <tr *ngFor="let product of filteredProducts">
             <td><img *ngIf="showImage"
               [src]="product.imageUrl"
               [title]="product.productName"
               [style.width.px]="imageWidth"
               ></td>
             <td>{{ product.productName }}</td>
-            <td>{{ product.productCode | lowercase }}</td>
+            <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price | currency:'GBP' }}</td>
-            <td>{{ product.starRating }}</td>
+            <td>{{ product.price | currency: 'GBP' }}</td>
+            <td><pm-star
+              [rating]="product.starRating"
+              (ratingClicked)="onRatingClicked($event)"
+              ></pm-star></td>
           </tr>
         </tbody>
       </table>
