--- a/acme/src/app/products/product-detail.component.html
+++ b/acme/src/app/products/product-detail.component.html
@@ -1,3 +1,14 @@
-<p>
-  product-detail works!
-</p>
+<div class="card" *ngIf="product">
+  <div class="card-header">
+    {{ pageTitle + ": " + product.productName }}
+  </div>
+  <div class="card-footer">
+    <button
+    class="btn btn-outline-secondary"
+    style="width:80px"
+    (click)="onBack()"
+    >
+      Back
+    </button>
+  </div>
+</div>
