--- a/acme/src/app/products/product-list.component.html
+++ b/acme/src/app/products/product-list.component.html
@@ -38,7 +38,7 @@
               [title]="product.productName"
               [style.width.px]="imageWidth"
               ></td>
-            <td>{{ product.productName }}</td>
+            <td><a [routerLink]="['/products', product.productId]">{{ product.productName }}</a></td>
             <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency: 'GBP' }}</td>
